cabal-version: 2.2
name:          conduit-extra-process-leak-repro
version:       0.0.0
build-type:    Simple
synopsis:
  Repro for conduit-extra withCheckedProcessCleanup / sourceProcessWithStreams
  not killing child processes on async exceptions.

executable repro
  main-is:          Main.hs
  build-depends:
      base
    , async
    , bytestring
    , conduit
    , conduit-extra
    , process
    , streaming-commons
    , unliftio-core
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -Wall
